2007-11-07  Andy Wingo  <wingo@pobox.com>

	* flumotion/manager/component.py (ComponentAvatar.getWorker)
	(ComponentAvatar.getClockMaster): New accessors.
	(ComponentAvatar.perspective_removeKeycardId)
	(ComponentAvatar.perspective_expireKeycard): Simplify.
	(ComponentHeaven.feedServerAvailable)
	(ComponentHeaven._setupClocking): Use accessors.
	(ComponentHeaven.masterClockAvailable): Remove check for detached
	component.
	(ComponentHeaven.feedServerAvailable): Fix broken refactor.

	* flumotion/test/Makefile.am:
	* flumotion/test/test_manager_depgraph.py: Remove.

	* flumotion/manager/depgraph.py: Removed, no more users. Add back
	when we decide that we need more complexity?

	* flumotion/manager/component.py (ComponentHeaven.mapNetFeed): Fix
	poor implementation of the last changeset; allow a None toPort to
	just fall through.
	(ComponentHeaven._getFeedersForEaters)
	(ComponentHeaven._getFeederAvatar): Factor out the process of
	mapping a feedId to an avatar/feedName pair into another method.

	* flumotion/manager/component.py (ComponentHeaven.mapNetFeed):
	Instead of raising TryAgain on failure, debug and return None,
	None.
	(ComponentHeaven._connectEatersAndFeeders.connect): Handle a
	mapNetFeed failure with a nice debug statement.
	(ComponentHeaven._connectEatersAndFeeders): Remove TryAgain foo.

	* flumotion/manager/component.py
	(ComponentHeaven._getFeedersForEaters)
	(ComponentHeaven._getEatersForFeeders)
	(ComponentHeaven._connectEatersAndFeeders): It's not possible to
	have what we used to call a "detached avatar", due to the ordering
	in the cleanup() function in Vishnu.requestAvatar(), so remove
	those code paths. Note that getEatersForFeeders is suboptimal.

2007-11-06  Andy Wingo  <wingo@pobox.com>

	* flumotion/manager/component.py
	(ComponentHeaven._connectEatersAndFeeders): Coalesce
	_connectEaters, _connectEaterUpstream, _connectFeeders, and
	_connectFeederDownstream into this one laconism.